<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F1EBFF"
    android:foregroundTint="#000000"
    android:visibility="visible"
    tools:context=".Views.AboutOrderFragment">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#323076"
            android:minHeight="?attr/actionBarSize"
            app:subtitleTextColor="#FFFFFF"
            app:title="Информация о заявке"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:titleTextColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/order"
                android:textColor="#323076"
                android:textSize="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/kryg"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="25dp"
                    android:paddingTop="25dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_list_alt_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp"
                        android:text="@string/numberOrder"
                        android:textColor="#5E5E5E"
                        android:textSize="18dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/numberorder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="48dp"
                    android:textColor="#000000"
                    android:textSize="20dp"
                    android:text="ХУЙ"
                    tools:viewBindingType="TextView"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="25dp"
                    android:paddingTop="25dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_computer_24" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp"
                        android:text="@string/nameDevice"
                        android:textColor="#5E5E5E"
                        android:textSize="18dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/namedevice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="48dp"
                    android:text="Наушники"
                    android:textColor="#000000"
                    android:textSize="20dp"
                    tools:viewBindingType="TextView"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="25dp"
                    android:paddingTop="25dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_more_time_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp"
                        android:text="@string/datE"
                        android:textColor="#5E5E5E"
                        android:textSize="18dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/date_of_bringing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="48dp"
                    android:text="09.03.2022"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="25dp"
                    android:paddingTop="25dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_outline_location_on_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp"
                        android:text="@string/address"
                        android:textColor="#5E5E5E"
                        android:textSize="18dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="48dp"
                    android:text="г. Москва, проспект Вернадского, д. 1"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="25dp"
                    android:paddingTop="25dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_person_outline_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp"
                        android:text="@string/customer"
                        android:textColor="#5E5E5E"
                        android:textSize="18dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/customer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="48dp"
                    android:text="Иванов Иван Иванович\n+ 7 (901) 000-00-00"
                    android:textColor="#000000"
                    android:textSize="20dp"
                    tools:viewBindingType="TextView"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="25dp"
                    android:paddingTop="25dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_outline_support_agent_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp"
                        android:text="@string/nameMaster"
                        android:textColor="#5E5E5E"
                        android:textSize="18dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/master"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:paddingLeft="48dp"
                    android:text="Смирнов Семён Семёнович\n+ 7 (901) 000-00-00"
                    android:textColor="#000000"
                    android:textSize="20dp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>